package es.us.dp1.l4_04_24_25.saboteur.game;

import java.util.Optional;

import org.springframework.data.jpa.repository.Query;
import org.springframework.data.repository.CrudRepository;

import es.us.dp1.l4_04_24_25.saboteur.activePlayer.ActivePlayer;

public interface GameRepository extends CrudRepository<Game, Integer> {

    @Override
    Optional<Game> findById(Integer id);

    Optional<Game> findByLink(String link);

    Optional<Game> findByCreatorUsername(String creatorUsername);

    
/* 
   // Buscar todas las partidas gestionadas por un administrador específico
    @Query("SELECT g FROM Game g JOIN g.admins a WHERE a.username = :adminUsername")
    Iterable<Game> findAllByAdminUsername(String adminUsername);
*/
    // Buscar todas las partidas que no son privadas
    @Query("SELECT g FROM Game g WHERE g.isPrivate = false")
    Iterable<Game> findAllPublicGames();

    // Buscar todas las partidas que son privadas
    @Query("SELECT g FROM Game g WHERE g.isPrivate = true")
    Iterable<Game> findAllPrivateGames();
    
}
